--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         margin: 5px;
       }
       .card img {
-        /* display:block; */
-        /* vertical-align: bottom; */
+        display:block; 
+        vertical-align: bottom;
         width: 100%;
         border-radius: 5px 5px 0 0;
-        /* margin-bottom: -4px; */
+        margin-bottom: -4px;
       }
       .container {
         text-align: center;
@@ -39,6 +39,9 @@
       }
       .container p {
         margin-top: 12px;
+      }
+      .container {
+        background-color: lightblue;
       }
     </style>
   </head>
